--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,12 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@tailwindcss/postcss": "^4.0.14",
     "bootstrap": "^5.3.3",
     "frontend": "file:",
+    "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.0.14",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
