--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,26 +5,16 @@
 spring.application.name=crmImobiliario
 server.port=8080
 
-##############################################
-# 🌐 DATABASE CONFIGURATION
-##############################################
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/minha-base
-spring.datasource.username=meu-usuario
-spring.datasource.password=senha-segura
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
 
-##############################################
-# 🔑 SECURITY / AUTHENTICATION SETTINGS
-##############################################
-
-security.jwt.secret=${JWT_SECRET}
-security.jwt.expiration=3600000
 
 ##############################################
 # ☁️ FIREBASE CONFIGURATION
 ##############################################
+
+
+# Caminho para o arquivo de credenciais do Firestore
+firebase.credentials.path=config/firebase-key.json
 
 # Firebase Service Account Info
 firebase.type=service_account
@@ -39,14 +29,3 @@ firebase.auth_uri=https://accounts.google.com/o/oauth2/auth
 firebase.token_uri=https://oauth2.googleapis.com/token
 firebase.auth_provider_x509_cert_url=https://www.googleapis.com/oauth2/v1/certs
 firebase.client_x509_cert_url=${FIREBASE_CLIENT_CERT_URL}
-
-##############################################
-# ✉️ EMAIL SETTINGS
-##############################################
-
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=${EMAIL_USERNAME}
-spring.mail.password=${EMAIL_PASSWORD}
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
