chore: Configurar o Flyway

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,26 +6,22 @@ spring.application.name=crmImobiliario
 server.port=8080
 
 
-
-
 ##############################################
-# ☁️ FIREBASE CONFIGURATION
+# 🔧 BANCO DE DADOS POSTGRESS
 ##############################################
 
+# Configuração do PostgreSQL local
+spring.datasource.url=jdbc:postgresql://localhost:5432/seu_banco
+spring.datasource.username=seu_usuario
+spring.datasource.password=sua_senha
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Caminho para o arquivo de credenciais do Firestore
-firebase.credentials.path=config/firebase-key.json
+# Configuração do JPA (Hibernate)
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=none 
+spring.jpa.show-sql=true
 
-# Firebase Service Account Info
-firebase.type=service_account
-firebase.project_id=seu-projeto-id
-firebase.private_key_id=${FIREBASE_PRIVATE_KEY_ID}
-firebase.private_key=${FIREBASE_PRIVATE_KEY}
-firebase.client_email=${FIREBASE_CLIENT_EMAIL}
-firebase.client_id=${FIREBASE_CLIENT_ID}
-
-# Firebase Endpoints
-firebase.auth_uri=https://accounts.google.com/o/oauth2/auth
-firebase.token_uri=https://oauth2.googleapis.com/token
-firebase.auth_provider_x509_cert_url=https://www.googleapis.com/oauth2/v1/certs
-firebase.client_x509_cert_url=${FIREBASE_CLIENT_CERT_URL}
+# Configuração do Flyway
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
+spring.flyway.locations=classpath:db/migration
