--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,13 +7,13 @@ server.port=8080
 
 
 ##############################################
-# 🔧 BANCO DE DADOS POSTGRESS
+# 🔧 BANCO DE DADOS POSTGRES
 ##############################################
 
 # Configuração do PostgreSQL local
-spring.datasource.url=jdbc:postgresql://localhost:5432/seu_banco
-spring.datasource.username=seu_usuario
-spring.datasource.password=sua_senha
+spring.datasource.url=jdbc:postgresql://localhost:5432/crm_users
+spring.datasource.username=postgres
+spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Configuração do JPA (Hibernate)
@@ -25,3 +25,10 @@ spring.jpa.show-sql=true
 spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
 spring.flyway.locations=classpath:db/migration
+
+##############################################
+# 🔧 CONFIGURAÇÃO 
+##############################################
+
+
+
