--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -27,8 +27,10 @@ spring.flyway.baseline-on-migrate=true
 spring.flyway.locations=classpath:db/migration
 
 ##############################################
-# 🔧 CONFIGURAÇÃO 
+# 🔧 CONFIGURAÇÃO FIREBASE 
 ##############################################
 
-
+# Firestore (Google Cloud)
+spring.cloud.gcp.firestore.enabled=false
+spring.cloud.gcp.firestore.credentials.location=file:${GOOGLE_APPLICATION_CREDENTIALS}
 
