Atualização backend postgress local

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,7 +11,7 @@ server.port=8080
 ##############################################
 
 # Configuração do PostgreSQL local
-spring.datasource.url=jdbc:postgresql://localhost:5432/crm_users
+spring.datasource.url=jdbc:postgresql://localhost:5432/crm_imobiliario
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
