--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -18,13 +18,13 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Configuração do JPA (Hibernate)
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=none 
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 # Configuração do Flyway
-spring.flyway.enabled=true
-spring.flyway.baseline-on-migrate=true
-spring.flyway.locations=classpath:db/migration
+# spring.flyway.enabled=true
+# spring.flyway.baseline-on-migrate=true
+# spring.flyway.locations=classpath:db/migration
 
 ##############################################
 # 🔧 CONFIGURAÇÃO FIREBASE 
